--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "react-dom": "^16.3.2",
     "react-router": "^4.2.0",
     "react-scripts": "1.1.4",
-    "react-strap": "^0.0.1"
+    "reactstrap": "^6.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
